libs/@local/hashql/eval/tests/ui/graph/read/entity/nested-binary-operation.jsonc
//@ run: fail
//@ description: Nested binary operations not supported in filter expressions
// biome-ignore format: readability
["::graph::tail::collect",
  ["::graph::body::filter",
    ["::graph::head::entities", ["::graph::tmp::decision_time_now"]],
    ["fn", { "#tuple": [] }, { "#struct": { "vertex": "_" } }, "_",
      ["==",
        {"#literal": true},
        ["&&",
          //~^ ERROR Operation `&&` not supported here
          {"#literal": true},
          {"#literal": true}
        ]
      ]
    ]
  ]
]
